# Least-Square-Approximation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
agla/: predator_prey.hpp
agla/mtx/: column_vector.cpp  column_vector.hpp  elimination_matrix.cpp  elimination_matrix.hpp  identity_matrix.cpp  identity_matrix.hpp  matrix.cpp  matrix.hpp  permutation_matrix.cpp  permutation_matrix.hpp  square_matrix.cpp  square_matrix.hpp
